# ticit

./: .devcontainer.json  .eslintrc.json  .gitignore  LICENSE  README.md  jest.config.json  jsconfig.json  package-lock.json  package.json  rollup.config.js  svelte.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/: frontend-check.yaml  frontend-install.yaml
.github/actions/backend-check/: action.yaml
.github/actions/backend-install/: action.yaml
.github/actions/check-diff/: action.yaml
.github/actions/frontend-check/: action.yaml
.github/actions/frontend-install/: action.yaml
.github/workflows/: check-frontend.yaml  publish.yaml  publish.yml  pull-request.yaml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: desktop.json
backend/icons/: icon.icns
backend/src/: commands.rs  completions.rs  database.rs  lib.rs  main.rs  simple_summary.rs  simple_time.rs  utils.rs  weekly_data.rs
backend/tests/: daily_summary.rs  database.rs
frontend/: .eslintrc.cjs  .swcrc  biome.json  index.html  jest.config.json  jsconfig.json  package-lock.json  package.json  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts
frontend/src/: Main.svelte  main.ts  types.ts
frontend/src/bits/: Flex.svelte  IconButton.svelte  Input.svelte
frontend/src/bits/icons/: Ban.svelte  Bicycle.svelte  CoffeeCup.svelte  Files.svelte  Fireworks.svelte  Pencil.svelte  Plus.svelte  Stamp.svelte  Teabag.svelte  Timer.svelte  TrashCan.svelte
frontend/src/components/: DailyData.svelte  DailyOverviewTable.svelte  EntryList.svelte  Flex.stories.svelte  Flex.svelte  IconButton.stories.svelte  IconButton.svelte  Input.stories.svelte  Input.svelte  ListElementForm.stories.svelte  ListElementForm.svelte  Page.stories.svelte  Page.svelte  PageSelector.svelte  Table.stories.svelte  Table.svelte
frontend/src/components/entry/: Entry.svelte  EntryBase.svelte  EntryBreakDisplay.svelte  EntryBreakEdit.svelte  EntryDisplay.svelte  EntryEdit.svelte  EntryNew.svelte
frontend/src/components/icons/: ArrowLeft.svelte  ArrowRight.svelte  ChevronLeft.svelte  ChevronRight.svelte  Close.svelte  Pencil.svelte  Reload.svelte  TrashCan.svelte
frontend/src/domain/: DefaultLayout.svelte
frontend/src/domain/daily_data/: DailyData.svelte  DailyOverviewTable.svelte
frontend/src/domain/entry/: Entry.svelte  EntryList.svelte
frontend/src/domain/pages/: DailyOverviewPage.svelte  EntryPage.svelte  PageSelector.svelte  SimpleTimePage.svelte
frontend/src/domain/stores/: date.ts  entries.ts  now.ts  simpleTime.ts  (+1 more)
frontend/src/layouts/: DefaultLayout.svelte
frontend/src/pages/: DailyOverviewPage.svelte  EntryPage.svelte
frontend/src/stores/: entries.js  entries.ts  now.js  summaries.js  summaries.ts
frontend/src/util/: tauri.ts  time.js  time.ts
frontend/tests/: entrypage.test.ts  utils.js  utils.ts
public/: index.html
src/: App.svelte  Main.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  daily_summary.rs  database.rs  entry.rs  main.rs
src-tauri/tests/: database.rs
src/bits/: Flex.svelte  IconButton.svelte  Input.svelte  ListElement.svelte  Page.svelte
src/bits/icons/: ArrowRight.svelte  Ban.svelte  Bicycle.svelte  Checkmark.svelte  ChevronLeft.svelte  ChevronRight.svelte  Close.svelte  CoffeeCup.svelte  Files.svelte  Fireworks.svelte  Pencil.svelte  Plus.svelte  Reload.svelte  Stamp.svelte  Teabag.svelte  Timer.svelte  TrashCan.svelte
src/components/: DailyData.svelte  DailyOverviewTable.svelte  DaySelector.svelte  Entry.svelte  EntryButtons.svelte  EntryList.svelte  EntryNew.svelte  EntryRead.svelte  EntryWrite.svelte  PageSelector.svelte
src/components/entry/: EntryBase.svelte  EntryBreakDisplay.svelte  EntryBreakEdit.svelte  EntryDisplay.svelte  EntryEdit.svelte  EntryNew.svelte
src/layouts/: DefaultLayout.svelte  HorizontalLayout.svelte
src/pages/: DailyOverviewPage.svelte  EntryPage.svelte
src/stores/: date.js  entries.js  now.js  summaries.js
src/stores/__mocks__/: entries.js  now.js
src/util/: time.js
tests/: entrypage.test.js  utils.js
(+10 files in other folders)
