[package]
name = "ticit"
version = "1.0.7"
description = "Simple timekeeping app"
authors = ["Dustin Holm"]
license = "MIT"
default-run = "ticit"
edition = "2021"
rust-version = "1.74"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sled = "0.34.7"
tauri = { version = "1.4.1", features = ["shell-open", "updater"] }
time = { version = "0.3.31", features = [
    "formatting",
    "parsing",
    "serde",
    "serde-human-readable",
] }

[dev-dependencies]
naughty-strings = "0.2.4"
tempfile = "3.9.0"

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
