[package]
name = "ticit"
version = "0.1.0"
description = "Simple timekeeping app"
authors = ["Dustin Holm"]
license = ""
repository = ""
default-run = "ticit"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
tauri = { version = "1.2", features = [] }
time = {version = "0.3", features = ["formatting", "parsing", "serde", "serde-human-readable"] }
bincode = "1.3.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
