[package]
name = "ticit"
version = "1.0.0"
description = "Simple timekeeping app"
authors = ["Dustin Holm"]
license = "MIT"
default-run = "ticit"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
tauri = { version = "1.3", features = ["updater"] }
time = {version = "0.3", features = ["formatting", "parsing", "serde", "serde-human-readable"] }
bincode = "1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
